# KikoBot

./: KikoBot.rar
KikoBot/: CMakeLists.txt
KikoBot/config/: colors.json
KikoBot/include/: utils.h
KikoBot/src/: color_detector.cpp  main.cpp  utils.cpp
